working solution tvh4